--- a/templates/register.html
+++ b/templates/register.html
@@ -24,9 +24,13 @@
         
     </form>
 
+    <div>
+        {% for message in messages %}
+        <h3> {{message}}</h3>
+        {% endfor %}
+    </div>
+
 
 </body>
-
-
 
 </html>
