--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
 									<li class="active"><a href="index.html">Home</a></li>
 									<li><a href="contact.html">Contact</a></li>
 									<li><a href="accounts/register">Register</a></li>
+									<li><a href="accounts/login">Login</a></li>
 								</ul>
 							</nav>
 							<div class="header_phone ml-auto">Call us: 7386162646</div>
